# leechkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-checks.yaml
src/leechkit/: __main__.py  detector.py  pbd.py  utils.py
tests/: test_calculate_effective_review_date.py  test_fast_pbd.py
