[project]
name = "leechkit"
version = "0.1.0"
description = "Tools to help find leeches in Anki"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anki==25.2",
    "numpy>=2.2.3",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "hypothesis>=6.129.1",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leechkit"]
